[gd_scene load_steps=11 format=2]

[ext_resource path="res://main/MainPanel.gd" type="Script" id=1]
[ext_resource path="res://assets/shaders/blur_shader.tres" type="Material" id=2]
[ext_resource path="res://assets/icons/ic_exit.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/ic_settings.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/logo.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/icons/ic_leaderboard.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0470588, 0.0470588, 0.0470588, 0.960784 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "show"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.7, 1 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animate_position"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="MainPanel" type="Panel"]
modulate = Color( 1, 1, 1, 0 )
material = ExtResource( 2 )
margin_right = 480.0
margin_bottom = 1080.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 3 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 24
custom_constants/margin_top = 24
custom_constants/margin_left = 24
custom_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 24.0
margin_top = 24.0
margin_right = 456.0
margin_bottom = 1056.0
custom_constants/separation = 8

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 432.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
custom_fonts/font = ExtResource( 5 )
text = "Refactal"
align = 1
valign = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 432.0
margin_bottom = 193.0
size_flags_vertical = 3

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 201.0
margin_right = 432.0
margin_bottom = 281.0
rect_min_size = Vector2( 0, 80 )
mouse_default_cursor_shape = 2
text = "New Game"

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 289.0
margin_right = 432.0
margin_bottom = 369.0
rect_min_size = Vector2( 0, 80 )
mouse_default_cursor_shape = 2
disabled = true
text = "Continue"

[node name="LevelsButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 377.0
margin_right = 432.0
margin_bottom = 457.0
rect_min_size = Vector2( 0, 80 )
mouse_default_cursor_shape = 2
toggle_mode = true
text = "Levels"

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 465.0
margin_right = 432.0
margin_bottom = 501.0
size_flags_vertical = 3

[node name="levelEditor" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 509.0
margin_right = 432.0
margin_bottom = 589.0
rect_min_size = Vector2( 0, 80 )
mouse_default_cursor_shape = 2
toggle_mode = true
text = "CreateLevel"

[node name="Control5" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 597.0
margin_right = 432.0
margin_bottom = 632.0
size_flags_vertical = 3

[node name="LeaderBoard" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 640.0
margin_right = 432.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 80 )
mouse_default_cursor_shape = 2
custom_constants/hseparation = 16
text = "Leaderboard"
icon = ExtResource( 6 )

[node name="Control4" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 728.0
margin_right = 432.0
margin_bottom = 764.0
size_flags_vertical = 3

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 772.0
margin_right = 432.0
margin_bottom = 852.0
rect_min_size = Vector2( 0, 80 )
mouse_default_cursor_shape = 2
custom_constants/hseparation = 16
text = "Settings"
icon = ExtResource( 4 )

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 860.0
margin_right = 432.0
margin_bottom = 940.0
rect_min_size = Vector2( 0, 80 )
mouse_default_cursor_shape = 2
custom_constants/hseparation = 16
text = "Quit Game"
icon = ExtResource( 3 )

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 948.0
margin_right = 432.0
margin_bottom = 983.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 991.0
margin_right = 432.0
margin_bottom = 1031.0
size_flags_horizontal = 3
alignment = 1

[node name="V" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 163.0
margin_right = 182.0
margin_bottom = 40.0
text = "v"
align = 1

[node name="Version" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 186.0
margin_right = 268.0
margin_bottom = 40.0
text = "X.X.X"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/hide = SubResource( 7 )
anims/show = SubResource( 6 )

[node name="PositionTween" type="Tween" parent="."]

[connection signal="button_up" from="MarginContainer/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_button_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelsButton" to="." method="_on_LevelsButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/levelEditor" to="." method="_on_levelEditor_pressed"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/LeaderBoard" to="." method="_on_LeaderBoard_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_button_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
